infra/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-app
  labels:
    app: chat-app
    group: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-app
  template:
    metadata:
      labels:
        app: chat-app
        group: backend
    spec:
      containers:
        - name: chat-app
          image: aleksandrazyto/chat-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
