infra/app-service-cip.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-app-svc
spec:
  selector:
    app: chat-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
