infra/app-service-np.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-app-npsvc
spec:
  type: NodePort
  selector:
    app: chat-app
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30008
