infra/app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-app
  labels:
    group: backend
spec:
  type: ClusterIP
  selector: 
    app: chat-app
  ports:
    - port: 3000
      targetPort: 3000
