infra/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chat-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: chat-app.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chat-app-svc
                port:
                  number: 3000
